<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_bg"
    tools:context=".ui.MainActivity.Edit.EditFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#F2F2F2"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="100dp"
        app:cardElevation="0.1dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/ic_close" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/edit_your_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/card_close"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/main_edit_progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_edit_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/txt_select_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#54FFFFFF"
            android:gravity="center"
            android:padding="4dp"
            android:text="Tap to Change"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/img_edit_user"
            app:layout_constraintEnd_toEndOf="@+id/img_edit_user"
            app:layout_constraintStart_toStartOf="@+id/img_edit_user" />


        <ProgressBar
            android:id="@+id/edit_progressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_edit_user"
            app:layout_constraintEnd_toEndOf="@+id/img_edit_user"
            app:layout_constraintStart_toStartOf="@+id/img_edit_user"
            app:layout_constraintTop_toTopOf="@+id/img_edit_user" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_edit_user">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/full_name"
                    tools:text="Abdulrahman" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_save"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.74">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/ic_next" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>